--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <font face="Helvetica" size="6">
       <a href="includes/pgm1.html">Program 1</a>
       &nbsp;&nbsp;|&nbsp;&nbsp;
-      <a href="includes/pgm2.html">Program 2</a>
+      <a href="includes/program2.php">Program 2</a>
     </font>
   </p>
   <br>
